Fixed overflow issue with the top bar on the session page.

--- a/client/src/components/content/session/StatusBar.scss
+++ b/client/src/components/content/session/StatusBar.scss
@@ -37,8 +37,9 @@
     justify-content: flex-end;
     justify-self: flex-end;
     grid-column: 1 / 3;
-    position: relative;
+    position: absolute;
     z-index: $z-index-tooltips;
+    margin-top: 2.25em;
     width: 0;
     overflow: visible;
 
